IngressConfig.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-ingress
spec:
  rules:
    paths:
      - path: /endpoint
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 90
